--- a/src/DotNetNew.WebApi/CSharp/Company.WebApplication1.csproj
+++ b/src/DotNetNew.WebApi/CSharp/Company.WebApplication1.csproj
@@ -31,10 +31,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.SpringCloud.Client" Condition="'$(AzureSpringCloudHostingOption)' == 'True' AND '$(FrameworkNetCoreApp21)' != 'True'" Version="$(AzureSpringCloudClientVersion)" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Condition="'$(AnyEfCore)' == 'True'" Version="$(EntityFrameworkCoreVersion)" />
-    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Condition="'$(RedisOption)' == 'True'" Version="$(RedisVersion)" />
-    <PackageReference Include="MySql.Data" Condition="'$(MySqlOption)' == 'True'" Version="$(MySqlVersion)" />
-    <PackageReference Include="Npgsql" Condition="'$(PostgreSqlOption)' == 'True'" Version="$(PostgreSqlVersion)" />
-    <PackageReference Include="RabbitMQ.Client" Condition="'$(RabbitMqOption)' == 'True' OR '$(HystrixOption)' == 'True'" Version="$(RabbitMqVersion)" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Condition="'$(RedisOption)' == 'True'" Version="$(RedisDriverVersion)" />
+    <PackageReference Include="MySql.Data" Condition="'$(MySqlOption)' == 'True'" Version="$(MySqlDriverVersion)" />
+    <PackageReference Include="Npgsql" Condition="'$(PostgreSqlOption)' == 'True'" Version="$(NpgsqlDriverVersion)" />
+    <PackageReference Include="RabbitMQ.Client" Condition="'$(RabbitMqOption)' == 'True' OR '$(HystrixOption)' == 'True'" Version="$(RabbitMqDriverVersion)" />
     <PackageReference Include="Steeltoe.CircuitBreaker.HystrixCore" Condition="'$(HystrixOption)' == 'True'" Version="$(SteeltoeVersion)" />
     <PackageReference Include="Steeltoe.CircuitBreaker.Hystrix.MetricsStreamCore" Condition="'$(HystrixOption)' == 'True'" Version="$(SteeltoeVersion)" />
     <PackageReference Include="Steeltoe.CloudFoundry.Connector.EFCore" Condition="'$(Steeltoe2Connector)' == 'True' AND '$(AnyEfCore)' == 'True'" Version="$(SteeltoeVersion)" />
