Allow and default to wildcard Steeltoe versions

--- a/src/DotNetNew.WebApi/CSharp/Directory.Build.props
+++ b/src/DotNetNew.WebApi/CSharp/Directory.Build.props
@@ -31,7 +31,7 @@
     <RedisDriverVersion>3.1.*</RedisDriverVersion>
     <RedisOption>false</RedisOption>
     <SqlServerOption>false</SqlServerOption>
-    <SteeltoeVersionOption>3.0.2</SteeltoeVersionOption>
+    <SteeltoeVersionOption>3.0.*</SteeltoeVersionOption>
   </PropertyGroup>
 
 </Project>
