--- a/src/DotNetNew.WebApi/CSharp/Company.WebApplication1.csproj
+++ b/src/DotNetNew.WebApi/CSharp/Company.WebApplication1.csproj
@@ -30,7 +30,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Condition="'$(OAuthOption)' == 'True'" Version="$(AzureOAuthVersion)" />
-    <PackageReference Include="Microsoft.Azure.SpringCloud.Client" Condition="'$(AzureSpringCloudHostingOption)' == 'True' AND '$(FrameworkNetCoreApp21)' != 'True'" Version="$(AzureSpringCloudClientVersion)" />
+    <PackageReference Include="Microsoft.Azure.SpringCloud.Client" Condition="'$(AzureSpringCloudHostingOption)' == 'True' AND '$(FrameworkNetCoreApp21)' != 'True' AND '$(Steeltoe3)' == 'True'" Version="2.0.0-preview.1" />
+    <PackageReference Include="Microsoft.Azure.SpringCloud.Client" Condition="'$(AzureSpringCloudHostingOption)' == 'True' AND '$(FrameworkNetCoreApp21)' != 'True' AND '$(Steeltoe2)' == 'True'" Version="1.0.0-preview.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Condition="'$(AnyEfCore)' == 'True'" Version="$(EntityFrameworkCoreVersion)" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Condition="'$(RedisOption)' == 'True'" Version="$(RedisDriverVersion)" />
     <PackageReference Include="MongoDB.Driver" Condition="'$(MongoDbOption)' == 'True'" Version="$(MongoDbDriverVersion)" />
