Add a project description option [#37]

--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/Company.WebApplication1.csproj
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/Company.WebApplication1.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>$(FrameworkOption)</TargetFramework>
+    <!--#if (HasDescription) -->
+    <Description>$(DescriptionOption)</Description>
+    <!--#endif -->
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
