--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/Directory.Build.props
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/Directory.Build.props
@@ -34,6 +34,7 @@
     <RedisOption>false</RedisOption>
     <SqlServerOption>false</SqlServerOption>
     <SteeltoeVersionOption>3.0.*</SteeltoeVersionOption>
+    <StreamRabbitMqOption>false</StreamRabbitMqOption>
   </PropertyGroup>
 
 </Project>
