--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/appsettings.json
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/appsettings.json
@@ -1,5 +1,5 @@
 {
-  //#if (PlaceholderOption)
+  //#if (ConfigurationPlaceholderOption)
   "ResolvedPlaceholderFromEnvVariables": "${PATH?NotFound}",
   "UnresolvedPlaceholder": "${SomKeyNotFound?NotFound}",
   "ResolvedPlaceholderFromJson": "${Logging:LogLevel:System?${Logging:LogLevel:Default}}",
